--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #1e1ef3;
+    background-color: #46b929d2;
     display: flex;
     justify-content: center;
     padding-top: 50px;
 }
 
 .container {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    background: rgb(0, 0, 0);
+    padding: 30px;
+    border: 10px solid #ffffff;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgba(249, 0, 0, 0.1);
     width: 300px;
 }
 
 h2 {
     text-align: center;
-    color: #333;
+    color: #ffffff;
 }
 
 .input-group {
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: flex;
     gap: 10px;
 }
@@ -27,8 +30,8 @@ h2 {
 input {
     flex-grow: 1;
     padding: 8px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 8px solid #2da424;
+    border-radius: 10px;
 }
 
 button {
@@ -51,8 +54,9 @@ ul {
 }
 
 li {
-    background: #fff;
-    border-bottom: 1px solid #eee;
+    background: #ffffff;
+    border: 8px solid #2da424;
+    border-radius: 8px;
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -65,6 +69,6 @@ li:hover {
 }
 li.feita {
     text-decoration: line-through;
-    color: gray;
+    color: rgb(255, 0, 0);
 }
 
